# stochastic-control-saa-clt

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
scripts/: plot_histograms_qqplots.py  plot_true_variance.py
src/lqr/: figure_style.py  histograms_qqplots.py  lqr.py  lqr_histograms_qqplots.py  lqr_variance_revised.py  problem_data.py  true_variance.py  value_functions.py
