[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stochastic-control-saa-clt"
version = "0.1.0"
description = "Supplementary code for the manuscript: Central Limit Theorems for Sample Average Approximations in Stochastic Optimal Control"
readme = "README.md"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "matplotlib",
    "scipy",
    "cvxpy"
]
